// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Organization /> Expect to have unit tests specified 1`] = `
<Component
  style={
    Object {
      "padding": 12,
    }
  }
>
  <H1
    color="default"
  >
    Organization
  </H1>
  <H2
    color="default"
  >
    any
  </H2>
  <Button
    color="secondary"
    onPress={[Function]}
    title="Switch to Donor Mode"
    variant="contained"
  />
</Component>
`;

exports[`<Organization /> Expect to have unit tests specified 2`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock>
    <Component
      style={
        Object {
          "padding": 12,
        }
      }
    >
      <H1
        color="default"
      >
        You're not associated to any organization yet
      </H1>
      <Connect(RegisterNewOrg) />
      <Button
        color="secondary"
        onPress={[Function]}
        title="Switch to Donor Mode"
        variant="contained"
      />
    </Component>
  </ScrollViewMock>
</Component>
`;
